--- a/docs/mpsl/0401.md
+++ b/docs/mpsl/0401.md
@@ -4,21 +4,24 @@ group: "Hilbert Spaces and Functional Analysis"
 title: "1. Hilbert Spaces"
 ---
 
-- 
+- 센서를 통해 관찰되는 신호(signal)들이나 데이터가 기록되는 공간을 $$ \mathcal{X} $$ 로 표기한다. $\mathcal{X}$ 의 원소로 $x, y, z$ 등의 기호를 사용하고 $x, y, z \in \mathcal{X}$ 로 쓴다
 
-- 센서를 통해 관찰되는 신호(Signal)들이 기록되는 공간을 $$ \mathcal{X} $$ 로 표기한다
+- 가령 \\( \mathcal{X} \\) 가 MNIST 데이터셋, 즉 \\( 28 \times 28 \\) 픽셀 이미지 중 0 ~ 9 까지의 모든 숫자들의 이미지를 모은 집합이라면 그 원소는 \\( x \\) 는 
 
-- 이 페이지에선 $$ \mathcal{X} $$ 를 **벡터공간(Vector space)** 으로 생각하고, 내적(Inner product) $$ \langle \cdot, \cdot \rangle $$ 이 정의되었다고 가정한다
+![figure1.1]({{ site.baseurl }}/images/mpsl_Figure040101.png) \\( \in \\) ![figure 1.2]({{ site.baseurl }}/images/mpsl_Figure040102.png)
 
-- 공간 $$ \mathcal{X}$$ 의 두 원소 $$ x, y \in \mathcal{X} $$ 에 대해서 **거리(distance)** 를 표현하고자 할 때, 다음과 같은 함수로 정의내린다
+- 이 페이지에선 $$ \mathcal{X} $$ 를 **벡터공간(vector space)** 으로 생각하고, 내적(Inner product) $$ \langle \cdot, \cdot \rangle $$ 이 정의되었다고 가정한다
+
+- 공간 $$ \mathcal{X}$$ 의 두 원소 $$ x, y \in \mathcal{X} $$ 에 대해서 **거리(distance)** 를 표현하고자 할 때, 다음과 같은 거리함수(distance function)로 정의내린다
 
 ---
 
-`Definition 1`. 임의의 $$ x,y,z \in \mathcal{X} $$ 에 대해 다음 세 조건을 만족하는 함수 $$ d:\mathcal{X}\times\mathcal{X}\to\mathbb{R} $$ 를 **거리함수(distance function)** 라 부른다 :
+`Definition 1`. 임의의 $$ x,y,z \in \mathcal{X} $$ 에 대해 다음 네 조건을 만족하는 함수 $$ d:\mathcal{X}\times\mathcal{X}\to\mathbb{R} $$ 를 **거리함수(distance function)** 라 부른다 :
 
-1. 항상 양수이다 : $$ d(x,y)\geq 0 $$ 이고 $$ d(x,y)=0 $$ 이기 위한 필요충분조건은 $$ x=y $$ 이다
-2. 대칭성을 가진다 : $$ d(x,y) = d(y,x) $$
-3. 삼각부등식을 만족한다 : $$ d(x,y) \leq d(x,z) + d(z,y) $$
+1. 항상 양수이다 : \\( d(x,y)\geq 0 \\)
+2. 거리가 0 이면 같은 원소다 : \\( d(x,y)=0 \\) 이기 위한 필요충분조건은 \\( x=y \\) 이다
+3. 대칭성을 가진다 : \\( d(x,y) = d(y,x) \\)
+4. 삼각부등식을 만족한다 : \\( d(x,y) \leq d(x,z) + d(z,y) \\)
 
 ---
 
