--- a/docs/mpsl/0400.md
+++ b/docs/mpsl/0400.md
@@ -1,12 +1,12 @@
 ---
 layout: page-sidenav
-group: "Mathematical Principles of Statistical Learning"
-title: "1. Hilbert Spaces and Functional Analysis"
+group: "Norm and Hilbert Spaces"
+title: "Preface"
 ---
 
 ## Preface
 
-- Statistical Learning 은 확률론(Probability Theory) 과 함수해석학(Functional Analysis) 
+- Statistical Learning 은 확률론(Probability Theory) 과 함수해석학(Functional Analysis) 지식을 바탕으로 전개된다. 지금까지 확률론의 기초 지식들을 배웠다면 이번에는 함수해석학의 기본 내용들을 소개한다
 
 
 
@@ -14,12 +14,12 @@ title: "1. Hilbert Spaces and Functional Analysis"
 
 ## List
 
-[1. Hilbert Spaces](https://sungbinlim.github.io/sl/docs/mpsl/0101)
+[1. Hilbert Spaces](https://sungbinlim.github.io/sl/docs/mpsl/0401)
 
-[2. Function Spaces](https://sungbinlim.github.io/sl/docs/mpsl/0102)
+[2. Function Spaces](https://sungbinlim.github.io/sl/docs/mpsl/0402)
 
-[3. Elements of Functional Analysis](https://sungbinlim.github.io/sl/docs/mpsl/0103)
+[3. Elements of Functional Analysis](https://sungbinlim.github.io/sl/docs/mpsl/0403)
 
-[4. Mercer Kernels and RKHS](https://sungbinlim.github.io/sl/docs/mpsl/0104)
+[4. Mercer Kernels and RKHS](https://sungbinlim.github.io/sl/docs/mpsl/0404)
 
-[5. Support Vector Machine](https://sungbinlim.github.io/sl/docs/mpsl/0105)
+[5. Support Vector Machine](https://sungbinlim.github.io/sl/docs/mpsl/0405)
