--- a/docs/mpsl/0401.md
+++ b/docs/mpsl/0401.md
@@ -4,11 +4,11 @@ group: "Hilbert Spaces and Functional Analysis"
 title: "1. Hilbert Spaces"
 ---
 
-- 센서를 통해 관찰되는 신호(signal)들이나 데이터가 기록되는 공간을 $$ \mathcal{X} $$ 로 표기한다. $\mathcal{X}$ 의 원소로 $x, y, z$ 등의 기호를 사용하고 $x, y, z \in \mathcal{X}$ 로 쓴다
+- 센서를 통해 관찰되는 신호(signal)들이나 데이터가 기록되는 공간을 \\( \mathcal{X} \\) 로 표기한다. \\( \mathcal{X} \\) 의 원소로 \\( x, y, z \\) 등의 기호를 사용하고 \\( x, y, z \in \mathcal{X} \\) 로 쓴다
 
-- 가령 \\( \mathcal{X} \\) 가 MNIST 데이터셋, 즉 \\( 28 \times 28 \\) 픽셀 이미지 중 0 ~ 9 까지의 모든 숫자들의 이미지를 모은 집합이라면 그 원소는 \\( x \\) 는 
+- 가령 \\( \mathcal{X} \\) 가 MNIST 데이터셋, 즉 \\( 28 \times 28 \\) 픽셀 이미지 중 0 ~ 9 까지의 모든 숫자들의 이미지를 모은 집합이라면 그 원소는 \\( x \\) 는 개별 이미지를 말한다
 
-![figure 1.1]({{ site.baseurl }}/images/mpsl_Figure040101.png) \\( \in \\) ![figure 1.2]({{ site.baseurl }}/images/mpsl_Figure040102.png)
+![figure 1.1 20%]({{ site.baseurl }}/images/mpsl_Figure040101.png) \\( \in \\) ![figure 1.2]({{ site.baseurl }}/images/mpsl_Figure040102.png)
 
 - 이 페이지에선 $$ \mathcal{X} $$ 를 **벡터공간(vector space)** 으로 생각하고, 내적(Inner product) $$ \langle \cdot, \cdot \rangle $$ 이 정의되었다고 가정한다
 
