--- a/docs/mpsl/0401.md
+++ b/docs/mpsl/0401.md
@@ -6,7 +6,7 @@ title: "1. Hilbert Spaces"
 
 - 센서를 통해 관찰되는 신호(signal)들이나 데이터가 기록되는 공간을 \\( \mathcal{X} \\) 로 표기한다. \\( \mathcal{X} \\) 의 원소로 \\( x, y, z \\) 등의 기호를 사용하고 \\( x, y, z \in \mathcal{X} \\) 로 쓴다
 
-- 가령 \\( \mathcal{X} \\) 가 MNIST 데이터셋, 즉 \\( 28 \times 28 \\) 픽셀 이미지 중 0 ~ 9 까지의 모든 숫자들의 이미지를 모은 집합이라면 그 원소는 \\( x \\) 는 개별 이미지를 말한다
+- 가령 \\( \mathcal{X} \\) 가 MNIST 데이터셋, 즉 \\( 28 \times 28 \\) 픽셀 이미지 중 0 ~ 9 까지의 모든 숫자들의 이미지를 모은 집합이라면 그 원소 \\( x \\) 는 개별 이미지를 말한다
 
 ![figure 1.1 20%]({{ site.baseurl }}/images/mpsl_Figure040101.png) \\( \in \\) ![figure 1.2]({{ site.baseurl }}/images/mpsl_Figure040102.png)
 
