--- a/docs/mpsl/0401.md
+++ b/docs/mpsl/0401.md
@@ -8,7 +8,7 @@ title: "1. Hilbert Spaces"
 
 - 가령 \\( \mathcal{X} \\) 가 MNIST 데이터셋, 즉 \\( 28 \times 28 \\) 픽셀 이미지 중 0 ~ 9 까지의 모든 숫자들의 이미지를 모은 집합이라면 그 원소 \\( x \\) 는 개별 이미지를 말한다
 
-![figure 1.1 5%]({{ site.baseurl }}/images/mpsl_Figure040101.png) \\( \in \\) ![figure 1.2]({{ site.baseurl }}/images/mpsl_Figure040102.png)
+![figure1.1]({{ site.baseurl }}/images/mpsl_Figure040101.png) \\( \in \\) ![figure1.2]({{ site.baseurl }}/images/mpsl_Figure040102.png)
 
 
 - 보통 원소 \\( x \\) 는 흔히들 하나의 숫자를 떠올리곤 하지만 MNIST 이미지처럼 행렬을 원소로 가질수도 있고, 벡터, 텐서 심지어 함수 자체를 원소로 가질 수 있다
@@ -21,7 +21,7 @@ title: "1. Hilbert Spaces"
 
 ---
 
-`Definition 1`. 임의의 $$ x,y,z \in \mathcal{X} $$ 에 대해 다음 네 조건을 만족하는 함수 $$ d:\mathcal{X}\times\mathcal{X}\to\mathbb{R} $$ 를 **거리함수(distance function)** 라 부른다 :
+`Definition 1`. 임의의 $$ x,y,z \in \mathcal{X} $$ 에 대해 다음 네 조건을 만족하는 함수 $$ d:\mathcal{X}\times\mathcal{X}\to\mathbb{R} $$ 를 **거리함수(distance function)** 라 부른다
 
 1. 항상 양수이다 : \\( d(x,y)\geq 0 \\)
 2. 거리가 0 이면 같은 원소다 : \\( d(x,y)=0 \\) 이기 위한 필요충분조건은 \\( x=y \\) 이다
