--- a/docs/mpsl/0401.md
+++ b/docs/mpsl/0401.md
@@ -4,16 +4,20 @@ group: "Hilbert Spaces and Functional Analysis"
 title: "1. Hilbert Spaces"
 ---
 
+![figure1.3 5%](/Users/sungbin-pro/GitHub/sl/images/mpsl_Figure040103.png)
+
+---
+
 - 센서를 통해 관찰되는 신호(signal)들이나 데이터가 기록되는 공간을 \\( \mathcal{X} \\) 로 표기한다. \\( \mathcal{X} \\) 의 원소로 \\( x, y, z \\) 등의 기호를 사용하고 \\( x, y, z \in \mathcal{X} \\) 로 쓴다
 
 - 가령 \\( \mathcal{X} \\) 가 MNIST 데이터셋, 즉 \\( 28 \times 28 \\) 픽셀 이미지 중 0 ~ 9 까지의 모든 숫자들의 이미지를 모은 집합이라면 그 원소 \\( x \\) 는 개별 이미지를 말한다
 
-![figure1.1]({{ site.baseurl }}/images/mpsl_Figure040101.png) \\( \in \\) ![figure1.2]({{ site.baseurl }}/images/mpsl_Figure040102.png)
+![figure1.1 50% ]({{ site.baseurl }}/images/mpsl_Figure040101.png) \\( \in \\) ![figure1.2]({{ site.baseurl }}/images/mpsl_Figure040102.png)
 
 
-- 보통 원소 \\( x \\) 는 흔히들 하나의 숫자를 떠올리곤 하지만 MNIST 이미지처럼 행렬을 원소로 가질수도 있고, 벡터, 텐서, 심지어 함수 자체를 원소로 가질 수 있다
+- 보통 원소 \\( x \\) 는 흔히들 하나의 숫자를 떠올리곤 하지만 MNIST 이미지처럼 행렬을 원소로 가질수도 있고, 텐서, 심지어 함수 자체를 원소로 가질 수 있다
 
-![figure1.3 50%]({{ site.baseurl }}/images/mpsl_Figure040103.png)
+![figure1.3 20%]({{ site.baseurl }}/images/mpsl_Figure040103.png)
 
 - 
 
