--- a/docs/mpsl/0101.md
+++ b/docs/mpsl/0101.md
@@ -1,6 +1,6 @@
 ---
 layout: page-sidenav
-group: "Modern Probability Theory"
+group: "Kolmogorov Probability Axiom"
 title: "1. Kolmogorov Probability Axiom"
 ---
 
