--- a/docs/mpsl/0102.md
+++ b/docs/mpsl/0102.md
@@ -1,7 +1,7 @@
 ---
 layout: page-sidenav
 group: "Kolmogorov Probability Axiom"
-title: "1. Basic Set Theory"
+title: "2. Metric Topology \\( \& \\) Analysis"
 ---
 
 - 확률론에서 기본적으로 사용되는 집합론 내용을 정리한다
