--- a/docs/mpsl/0401.md
+++ b/docs/mpsl/0401.md
@@ -1,6 +1,6 @@
 ---
 layout: page-sidenav
-group: "Hilbert Spaces and Functional Analysis"
+group: "Norm and Hilbert Spaces"
 title: "1. Hilbert Spaces"
 ---
 
