--- a/docs/mpsl/0203.md
+++ b/docs/mpsl/0203.md
@@ -1,6 +1,6 @@
 ---
 layout: page-sidenav
-group: "Modern Probability Theory"
+group: "Elementary Measure Theory"
 title: "2. Basic Measure Theory"
 ---
 
