--- a/docs/mpt/0202.md
+++ b/docs/mpt/0202.md
@@ -1,6 +1,6 @@
 ---
 layout: page-sidenav
-group: "Elementary Measure Theory"
+group: "SDE Theory"
 title: "2. Random Variables"
 mathjax: true
 ---
