--- a/docs/npb/0202.md
+++ b/docs/npb/0202.md
@@ -1,6 +1,6 @@
 ---
 layout: page-sidenav
-group: "Elementary Measure Theory"
+group: "Clustering and the Dirichlet Process"
 title: "2. Random Variables"
 mathjax: true
 ---
