--- a/docs/npb/0203.md
+++ b/docs/npb/0203.md
@@ -1,6 +1,6 @@
 ---
 layout: page-sidenav
-group: "Elementary Measure Theory"
+group: "Clustering and the Dirichlet Process"
 title: "2. Basic Measure Theory"
 ---
 
