--- a/docs/mpsl/0200.md
+++ b/docs/mpsl/0200.md
@@ -1,14 +1,18 @@
 ---
 layout: page-sidenav
-group: "Kolmogorov Probability Axiom"
+group: "Elementary Measure Theory"
 title: "0. Preface"
 ---
 
-- 이 Chapter 에서는 확률론에서 사용되는 기본적인 내용과 Kolmogorov 의 Probability Axiom 을 다룹니다
+- 이 Chapter 에서는 기본적인 측도론과 확률론에서의 응용을 살펴봅니다
 
 
-[1. Basic Set Theroy](https://sungbinlim.github.io/sl/docs/mpt/0101)
+[1. Measure space](https://sungbinlim.github.io/sl/docs/mpt/0201)
 
-[2. Metric Topology $$ \& $$ Analysis](https://sungbinlim.github.io/sl/docs/mpt/0102)
+[2. Measurable function](https://sungbinlim.github.io/sl/docs/mpt/0202)
 
-[3. Kolmogorov Probability Axiom](https://sungbinlim.github.io/sl/docs/mpt/0103)
+[3. Integration](https://sungbinlim.github.io/sl/docs/mpt/0203)
+
+[4. Inequalities](https://sungbinlim.github.io/sl/docs/mpt/0204)
+
+[5. Advanced ](https://sungbinlim.github.io/sl/docs/mpt/0204)
