--- a/docs/mpsl/0100.md
+++ b/docs/mpsl/0100.md
@@ -7,8 +7,8 @@ title: "0. Preface"
 - 이 Chapter 에서는 확률론에서 사용되는 기본적인 내용과 Kolmogorov 의 Probability Axiom 을 다룹니다
 
 
-[1. Basic Set Theroy](https://sungbinlim.github.io/sl/docs/mpt/0101)
+[1. Basic Set Theroy](https://sungbinlim.github.io/sl/docs/mpsl/0101)
 
-[2. Metric Topology $$ \& $$ Analysis](https://sungbinlim.github.io/sl/docs/mpt/0102)
+[2. Metric Topology $$ \& $$ Analysis](https://sungbinlim.github.io/sl/docs/mpsl/0102)
 
-[3. Kolmogorov Probability Axiom](https://sungbinlim.github.io/sl/docs/mpt/0103)
+[3. Kolmogorov Probability Axiom](https://sungbinlim.github.io/sl/docs/mpsl/0103)
