--- a/docs/mpsl/0.md
+++ b/docs/mpsl/0.md
@@ -1,6 +1,6 @@
 ---
 layout: page-sidenav
-group: "Mathematical Principles of Statistical Learning"
+group: "Statistical Learning"
 title: "Preface"
 ---
 
