--- a/docs/mpsl/0103.md
+++ b/docs/mpsl/0103.md
@@ -1,6 +1,6 @@
 ---
 layout: page-sidenav
-group: "Kolmogorov Probability Axiom"
+group: "Probability Theory"
 title: "3. Kolmogorov Probability Axiom"
 ---
 
