--- a/docs/mpsl/0200.md
+++ b/docs/mpsl/0200.md
@@ -1,18 +1,25 @@
 ---
 layout: page-sidenav
-group: "Elementary Measure Theory"
-title: "0. Preface"
+group: "Norm and Hilbert Spaces"
+title: "Preface"
 ---
 
-- 이 Chapter 에서는 기본적인 측도론과 확률론에서의 응용을 살펴봅니다
+## Preface
+
+- Statistical Learning 은 확률론(Probability Theory) 과 함수해석학(Functional Analysis) 지식을 바탕으로 전개된다. 지금까지 확률론의 기초 지식들을 배웠다면 이번에는 함수해석학의 기본 내용들을 소개한다
 
 
-[1. Measure space](https://sungbinlim.github.io/sl/docs/mpt/0201)
 
-[2. Measurable function](https://sungbinlim.github.io/sl/docs/mpt/0202)
+---
 
-[3. Integration](https://sungbinlim.github.io/sl/docs/mpt/0203)
+## List
 
-[4. Inequalities](https://sungbinlim.github.io/sl/docs/mpt/0204)
+[1. Hilbert Spaces](https://sungbinlim.github.io/sl/docs/mpsl/0201)
 
-[5. Advanced ](https://sungbinlim.github.io/sl/docs/mpt/0204)
+[2. Function Spaces](https://sungbinlim.github.io/sl/docs/mpsl/0202)
+
+[3. Elements of Functional Analysis](https://sungbinlim.github.io/sl/docs/mpsl/0203)
+
+[4. Mercer Kernels and RKHS](https://sungbinlim.github.io/sl/docs/mpsl/0204)
+
+[5. Support Vector Machine](https://sungbinlim.github.io/sl/docs/mpsl/0205)
