--- a/docs/mpsl/0102.md
+++ b/docs/mpsl/0102.md
@@ -1,6 +1,6 @@
 ---
 layout: page-sidenav
-group: "Kolmogorov Probability Axiom"
+group: "Probability Theory"
 title: "2. Metric Topology & Analysis"
 ---
 
