--- a/docs/mpsl/0201.md
+++ b/docs/mpsl/0201.md
@@ -1,32 +1,92 @@
 ---
 layout: page-sidenav
-group: "Elementary Measure Theory"
-title: "2. Basic Measure Theory"
+group: "Norm and Hilbert Spaces"
+title: "1. Hilbert Spaces"
 ---
 
-- 기본적인 측도론(Measure theory)을 소개하고 이에 기반한 확률론을 전개한다
+
+- 센서를 통해 관찰되는 신호(signal)들이나 데이터가 기록되는 공간을 \\( \mathcal{X} \\) 로 표기한다. \\( \mathcal{X} \\) 의 원소로 \\( x, y, z \\) 등의 기호를 사용하고 \\( x, y, z \in \mathcal{X} \\) 로 쓴다
+
+- 가령 \\( \mathcal{X} \\) 가 MNIST 데이터셋, 즉 \\( 28 \times 28 \\) 픽셀 이미지 중 0 ~ 9 까지의 모든 숫자들의 이미지를 모은 집합이라면 그 원소 \\( x \\) 는 개별 이미지를 말한다
+
+![figure1.1 50% ]({{ site.baseurl }}/images/mpsl_Figure040101.png) \\( \in \\) ![figure1.2]({{ site.baseurl }}/images/mpsl_Figure040102.png)
+
+
+- 보통 원소 \\( x \\) 는 흔히들 하나의 숫자를 떠올리곤 하지만 MNIST 이미지처럼 행렬을 원소로 가질수도 있고, 텐서, 심지어 함수 자체를 원소로 가질 수 있다
+
+![figure1.3 20%]({{ site.baseurl }}/images/mpsl_Figure040103.png)
+
 - 
 
+- 이 페이지에선 $$ \mathcal{X} $$ 를 **벡터공간(vector space)** 으로 생각하고, 내적(Inner product) $$ \langle \cdot, \cdot \rangle $$ 이 정의되었다고 가정한다
 
+- 공간 $$ \mathcal{X}$$ 의 두 원소 $$ x, y \in \mathcal{X} $$ 에 대해서 **거리(distance)** 를 표현하고자 할 때, 다음과 같은 거리함수(distance function)로 정의내린다
 
 ---
-## Measure Theory and Integration
 
-- [Kolmogorov Probability Axiom](https://sungbinlim.github.io/sl/docs/mpt/2) 을 통해 확률을 정의하기 위한 기본적인 공리들을 소개하였다
-- 이번 장에서는 확률공간(Probability space) \\( (\Omega,\mathcal{F},\mathbb{P}) \\) 이 주어져 있다는 전제 하에 이론을 전개한다
-- 표본공간 \\( \Omega \\) 에서 실수(real-value) 로 사상(mapping)되는 함수 \\( \mathbb{R} \\) \\( X : \Omega\to\mathbb{R}\\) 가 있다고 하자. 이 함수가 다음 성질을 만족하면 **확률변수(Random variable)** 라 부른다: 
+`Definition 1`. 임의의 $$ x,y,z \in \mathcal{X} $$ 에 대해 다음 네 조건을 만족하는 함수 $$ d:\mathcal{X}\times\mathcal{X}\to\mathbb{R} $$ 를 **거리함수(distance function)** 라 부른다
+
+1. 항상 양수이다 : \\( d(x,y)\geq 0 \\)
+2. 거리가 0 이면 같은 원소다 : \\( d(x,y)=0 \\) 이기 위한 필요충분조건은 \\( x=y \\) 이다
+3. 대칭성을 가진다 : \\( d(x,y) = d(y,x) \\)
+4. 삼각부등식을 만족한다 : \\( d(x,y) \leq d(x,z) + d(z,y) \\)
+
+---
+
+- 유클리드 공간(Euclidean Space)에서 점(point)과 점 사이의 거리가 대표적인 거리함수에 해당한다
+
+![figure1.1]({{ site.baseurl }}/images/mpsl_Figure010101.png){:class="center-block" height="200px"}
+
+- 거리함수의 종류는 매우 다양하다. 맨허튼 거리(Manhattan distance) 역시 유클리드 공간에서의 거리함수이다
+
+![figure1.1]({{ site.baseurl }}/images/mpsl_Figure010102.png){:class="center-block" height="200px"}
+
+
+- 벡터공간에선 특별히 노름(Norm)이란 개념을 도입해서 거리함수를 정의한다 
+
+---
+
+`Definition 2`. 벡터공간 $$ \mathcal{X} $$ 에서 정의된 함수 $$ \Vert \cdot \Vert : \mathcal{X} \to [0,\infty) $$ 이 다음 세 조건을 만족하면 **노름(Norm)** 이라 부르고, $$ (\mathcal{X},\Vert\cdot\Vert) $$ 를 **노름공간(Normed space)** 라 부른다
+
+1. 벡터 $$ x $$ 가 영벡터($$ \mathbf{0} $$) 이기 위한 필요충분조건은 $$ \Vert x \Vert = 0 $$ 이다
+
+2. 임의의 스칼라 $$ \alpha $$, 임의의 $$ x\in\mathcal{X} $$ 에 대해 $$ \Vert \alpha x \Vert = \vert \alpha \vert \Vert x \Vert $$ 이다
+
+3. **삼각부등식** : 임의의 $$ x,y\in\mathcal{X} $$ 에 대해 다음이 성립한다
 
 $$
-\{\omega\in\Omega :X(\omega)\in(a,b)\}\in\mathcal{F},\quad \forall a,b\in\mathbb{R}
+\Vert x+y \Vert \leq \Vert x \Vert + \Vert y \Vert
+$$
+ 
+---
+
+- 두 벡터 $$ x,y\in\mathcal{X} $$ 에 대해 $$ d(x,y) := \Vert x-y \Vert $$ 로 정의하면 거리함수가 된다. 이런 종류의 거리함수를 사용하는 이유는 벡터의 성질을 보다 효율적으로 다루기 위해서다
+	- 사실 위에서 소개한 유클리드 거리나 맨허튼 거리 모두 노름이다
+
+
+- **힐베르트 공간(Hilbert space)** $$ \mathcal{H} $$ 는 내적 $$ \langle\cdot,\cdot\rangle $$ 으로 노름(norm) $$ \Vert \cdot \Vert $$ 이 정의된 완비공간이다
+
+$$
+\Vert f \Vert_{\mathcal{H}} :=\sqrt{\langle f,f \rangle},\quad f\in\mathcal{H}
 $$
 
-- 동전 던지기를 예를 들어보자. 동전을 던졌을 때 앞(\\( H \\))이 나오면 1, 뒤(\\( T \\))가 나오면 0 이 나오는 함수 \\( X \\) 가 있다고 하자
-- 이 때 \\( a, b \\) 의 범위에 따라 아래와 같이 구분할 수 있다
+- 대표적인 힐베르트 공간은 $$ L_{2} $$ 공간과 Sobolev 공간 $$ W_{2}^{k} $$ 이 있다
+
+- 힐베르트 공간이 [분해가능(Separable)](https://en.wikipedia.org/wiki/Separable_space) 인 경우 [가산개의(Countable)](https://en.wikipedia.org/wiki/Countable_set) [직교기저(Orthogonal basis)](https://en.wikipedia.org/wiki/Orthonormal_basis) $$ (\varphi_{n})_{n\in\mathbb{N}} $$ 이 존재한다:
 
 $$
-\{\omega \in \Omega : X(\omega) \in (a,b)\} = \begin{cases}\Omega & : a < 0 < 1 < b \\ \{H\} & : 0 \leq a < 1 < b \\ \{T\} & : a < 0 < b \leq 1 \\ \emptyset & : \text{otherwise} \end{cases}
+f (x) = \sum_{n}\langle f,\varphi_{n} \rangle\varphi_{n}(x),\quad f\in\mathcal{H}
 $$
 
-![figure1.1]({{ site.baseurl }}/images/mpt_Figure1.1.png){:class="center-block" height="200px"}
+- 참고로 위 식은 아래와 같은 $$ \Vert \cdot \Vert_{\mathcal{H}} $$ -sense 하에서 수렴한다:
+
+$$
+\lim_{N\to\infty}\left\Vert f-\sum_{n=1}^{N}\langle f,\varphi_{n}\rangle \varphi_{n}\right\Vert_{\mathcal{H}}=0
+$$
+
+- $$ (\varphi_{n})_{n\in\mathbb{N}} $$ 는 [Gram-Schmidt procedure](https://en.wikipedia.org/wiki/Gram%E2%80%93Schmidt_process) 를 통해 구축할 수 있다
+
+
+
 
 
