--- a/docs/mpsl/0200.md
+++ b/docs/mpsl/0200.md
@@ -1,7 +1,7 @@
 ---
 layout: page-sidenav
-group: "Norm and Hilbert Spaces"
-title: "Preface"
+group: "Statistical Learning"
+title: "2. Norm and Hilbert spaces"
 ---
 
 ## Preface
