--- a/docs/mpsl/0.md
+++ b/docs/mpsl/0.md
@@ -4,7 +4,7 @@ group: "Statistical Learning"
 title: "Preface"
 ---
 
-- 이 페이지에선 Statistical Learning Theory 에서 사용되는 방법론의 수학적 원리들을 소개할 것입니다
+이 페이지에선 Statistical Learning Theory 에서 사용되는 방법론의 수학적 원리들을 소개할 것입니다
 
 	- Hilbert Spaces and Functional Analysis
 	- Fourier Analysis
