--- a/docs/mpsl/0100.md
+++ b/docs/mpsl/0100.md
@@ -1,7 +1,7 @@
 ---
 layout: page-sidenav
-group: "Probability Theory"
-title: "0. Preface"
+group: "Statistical Learning"
+title: "1. Elementary Probability Theory"
 ---
 
 - 이 Chapter 에서는 확률론에서 사용되는 기본적인 내용과 Kolmogorov 의 Probability Axiom 을 다룹니다
