--- a/docs/mpsl/0201.md
+++ b/docs/mpsl/0201.md
@@ -11,6 +11,7 @@ title: "1. Hilbert Spaces"
 
 ![figure1.1 5% ]({{ site.baseurl }}/images/mpsl_Figure040101.png) \\( \ \in \ \\) ![figure1.2]({{ site.baseurl }}/images/mpsl_Figure040102.png)
 
+- 현재 5% 이미지크기
 
 - 보통 원소 \\( x \\) 는 흔히들 하나의 숫자를 떠올리곤 하지만 MNIST 이미지처럼 행렬을 원소로 가질수도 있고, 텐서, 심지어 함수 자체를 원소로 가질 수 있다
 
