--- a/docs/mpsl/0201.md
+++ b/docs/mpsl/0201.md
@@ -9,7 +9,7 @@ title: "1. Hilbert Spaces"
 
 - 가령 \\( \mathcal{X} \\) 가 MNIST 데이터셋, 즉 \\( 28 \times 28 \\) 픽셀 이미지 중 0 ~ 9 까지의 모든 숫자들의 이미지를 모은 집합이라면 그 원소 \\( x \\) 는 개별 이미지를 말한다
 
-![figure1.1]({{ site.baseurl }}/images/mpsl_Figure040101.png){10%} \\( \ \in \ \\) ![figure1.2]({{ site.baseurl }}/images/mpsl_Figure040102.png)
+![figure1.1]({{ site.baseurl }}/images/mpsl_Figure040101.png){: 10%} \\( \ \in \ \\) ![figure1.2]({{ site.baseurl }}/images/mpsl_Figure040102.png)
 
 - 현재 10% 이미지크기
 
