--- a/docs/mpsl/0201.md
+++ b/docs/mpsl/0201.md
@@ -11,7 +11,7 @@ title: "1. Hilbert Spaces"
 
 ![figure1.1]({{ site.baseurl }}/images/mpsl_Figure040101.png){: width = "10px" height = "10px"} \\( \ \in \ \\) ![figure1.2]({{ site.baseurl }}/images/mpsl_Figure040102.png)
 
-- 현재 0.1% 이미지크기
+- 현재 10px 이미지크기
 
 - 보통 원소 \\( x \\) 는 흔히들 하나의 숫자를 떠올리곤 하지만 MNIST 이미지처럼 행렬을 원소로 가질수도 있고, 텐서, 심지어 함수 자체를 원소로 가질 수 있다
 
