--- a/docs/mpsl/0201.md
+++ b/docs/mpsl/0201.md
@@ -15,7 +15,7 @@ title: "1. Hilbert Spaces"
 
 ![figure1.2]({{ site.baseurl }}/images/mpsl_Figure040102.png){: width = "1%" height = "1%"}
 
-- 현재 1% 줄바꿈 이미지크기
+- 현재 1% 줄바꿈 + 도박
 
 - 보통 원소 \\( x \\) 는 흔히들 하나의 숫자를 떠올리곤 하지만 MNIST 이미지처럼 행렬을 원소로 가질수도 있고, 텐서, 심지어 함수 자체를 원소로 가질 수 있다
 
