--- a/docs/mpsl/0201.md
+++ b/docs/mpsl/0201.md
@@ -9,13 +9,15 @@ title: "1. Hilbert Spaces"
 
 - 가령 \\( \mathcal{X} \\) 가 MNIST 데이터셋, 즉 \\( 28 \times 28 \\) 픽셀 이미지 중 0 ~ 9 까지의 모든 숫자들의 이미지를 모은 집합이라면 그 원소 \\( x \\) 는 개별 이미지를 말한다
 
-![figure1.1 {: width = "1%" height = "1%"}]({{ site.baseurl }}/images/mpsl_Figure040101.png)
+<img src="{{ site.baseurl }}/images/mpsl_Figure040101.png" width="10%" height="10%" />
+
+![figure1.1]({{ site.baseurl }}/images/mpsl_Figure040101.png){: width = "1%" height = "1%"}
 
 \\( \ \in \ \\) 
 
 ![figure1.2]({{ site.baseurl }}/images/mpsl_Figure040102.png){: width = "1%" height = "1%"}
 
-- 현재 1% 줄바꿈 + 도박
+- 현재 1% 줄바꿈 + 도박3
 
 - 보통 원소 \\( x \\) 는 흔히들 하나의 숫자를 떠올리곤 하지만 MNIST 이미지처럼 행렬을 원소로 가질수도 있고, 텐서, 심지어 함수 자체를 원소로 가질 수 있다
 
