--- a/docs/mpsl/0201.md
+++ b/docs/mpsl/0201.md
@@ -14,7 +14,7 @@ title: "1. Hilbert Spaces"
 
 - 보통 원소 \\( x \\) 는 흔히들 하나의 숫자를 떠올리곤 하지만 MNIST 이미지처럼 행렬을 원소로 가질수도 있고, 텐서, 심지어 함수 자체를 원소로 가질 수 있다
 
-<img src="{{ site.baseurl }}/images/mpsl_Figure040103.png" width="50%" height="50%" />
+<img src="{{ site.baseurl }}/images/mpsl_Figure040103.png" width="50%" height="50%" align = "center"/>
 
 
 - 이 페이지에선 $$ \mathcal{X} $$ 를 **벡터공간(vector space)** 으로 생각하고, 내적(Inner product) $$ \langle \cdot, \cdot \rangle $$ 이 정의되었다고 가정한다
