--- a/docs/mpsl/0201.md
+++ b/docs/mpsl/0201.md
@@ -9,12 +9,12 @@ title: "1. Hilbert Spaces"
 
 - 가령 \\( \mathcal{X} \\) 가 MNIST 데이터셋, 즉 \\( 28 \times 28 \\) 픽셀 이미지 중 0 ~ 9 까지의 모든 숫자들의 이미지를 모은 집합이라면 그 원소 \\( x \\) 는 개별 이미지를 말한다
 
-\\(\qquad \qquad \qquad \qquad \qquad \qquad \qquad \qquad \\) <img src="{{ site.baseurl }}/images/mpsl_Figure040101.png" width="10%" height="10%" /> \\( \ \in \ \\) <img src="{{ site.baseurl }}/images/mpsl_Figure040102.png" width="10%" height="10%" />
+- 이미지 <img src="{{ site.baseurl }}/images/mpsl_Figure040101.png" width="10%" height="10%" /> 는 는 MNIST <img src="{{ site.baseurl }}/images/mpsl_Figure040102.png" width="10%" height="10%" /> 의 원소라고 말할 수 있다
 
 
 - 보통 원소 \\( x \\) 는 흔히들 하나의 숫자를 떠올리곤 하지만 MNIST 이미지처럼 행렬을 원소로 가질수도 있고, 텐서, 심지어 함수 자체를 원소로 가질 수 있다
 
-<img src="{{ site.baseurl }}/images/mpsl_Figure040103.png" width="50%" height="50%" align="center" />
+\\( \qquad \qquad \qquad \qquad \qquad \\) <img src="{{ site.baseurl }}/images/mpsl_Figure040103.png" width="50%" height="50%" />
 
 
 - 이 페이지에선 $$ \mathcal{X} $$ 를 **벡터공간(vector space)** 으로 생각하고, 내적(Inner product) $$ \langle \cdot, \cdot \rangle $$ 이 정의되었다고 가정한다
