--- a/docs/mpsl/0201.md
+++ b/docs/mpsl/0201.md
@@ -7,9 +7,9 @@ title: "1. Hilbert Spaces"
 
 - 센서를 통해 관찰되는 신호(signal)들이나 데이터가 기록되는 공간을 \\( \mathcal{X} \\) 로 표기한다. \\( \mathcal{X} \\) 의 원소로 \\( x, y, z \\) 등의 기호를 사용하고 \\( x, y, z \in \mathcal{X} \\) 로 쓴다
 
-- 가령 \\( \mathcal{X} \\) 가 MNIST 데이터셋, 즉 \\( 28 \times 28 \\) 픽셀 이미지 중 0 ~ 9 까지의 모든 숫자들의 이미지를 모은 집합이라면 그 원소 \\( x \\) 는 개별 이미지를 말한다
+- 가령 \\( \mathcal{X} \\) 가 MNIST 데이터셋, 즉 0 ~ 9 까지의 모든 숫자들의 이미지를 모은 집합이라면 그 원소 \\( x \\) 는 개별 이미지를 말한다
 
-- 이미지 <img src="{{ site.baseurl }}/images/mpsl_Figure040101.png" width="10%" height="10%" /> 는 는 MNIST <img src="{{ site.baseurl }}/images/mpsl_Figure040102.png" width="10%" height="10%" /> 의 원소라고 말할 수 있다
+- 위 표현을 기호로 나타내면 <img src="{{ site.baseurl }}/images/mpsl_Figure040101.png" width="1%" height="11%" /> \\( \in \\) <img src="{{ site.baseurl }}/images/mpsl_Figure040102.png" width="10%" height="10%" /> 로 쓸 수 있다
 
 
 - 보통 원소 \\( x \\) 는 흔히들 하나의 숫자를 떠올리곤 하지만 MNIST 이미지처럼 행렬을 원소로 가질수도 있고, 텐서, 심지어 함수 자체를 원소로 가질 수 있다
