--- a/docs/mpsl/0302.md
+++ b/docs/mpsl/0302.md
@@ -1,7 +1,7 @@
 ---
 layout: page-sidenav
-group: "Norm and Hilbert Spaces"
-title: "2. Function Spaces"
+group: "SVM and Kernel Methods"
+title: "2. Hard SVM"
 ---
 
 - Hilbert 공간의 성질과 Fourier Transform 의 관계를 이해한다
