--- a/docs/mpsl/0300.md
+++ b/docs/mpsl/0300.md
@@ -1,12 +1,12 @@
 ---
 layout: page-sidenav
 group: "Statistical Learning"
-title: "3. Norm and Hilbert spaces"
+title: "3. SVM and Kernel Methods"
 ---
 
 ## Preface
 
-- Statistical Learning 은 확률론(Probability Theory) 과 함수해석학(Functional Analysis) 지식을 바탕으로 전개된다. 지금까지 확률론의 기초 지식들을 배웠다면 이번에는 함수해석학의 기본 내용들을 소개한다
+- SVM
 
 
 
@@ -14,12 +14,14 @@ title: "3. Norm and Hilbert spaces"
 
 ## List
 
-[1. Hilbert Spaces](https://sungbinlim.github.io/sl/docs/mpsl/0201)
+[1. Mercer Kernels and RKHS](https://sungbinlim.github.io/sl/docs/mpsl/0301)
 
-[2. Function Spaces](https://sungbinlim.github.io/sl/docs/mpsl/0202)
+[2. Hard SVM](https://sungbinlim.github.io/sl/docs/mpsl/0302)
 
-[3. Elements of Functional Analysis](https://sungbinlim.github.io/sl/docs/mpsl/0203)
+[3. Soft SVM](https://sungbinlim.github.io/sl/docs/mpsl/0303)
 
-[4. Mercer Kernels and RKHS](https://sungbinlim.github.io/sl/docs/mpsl/0204)
+[4. Duality and Optimality](https://sungbinlim.github.io/sl/docs/mpsl/0304)
 
-[5. Support Vector Machine](https://sungbinlim.github.io/sl/docs/mpsl/0205)
+[5. Kernel Trick](https://sungbinlim.github.io/sl/docs/mpsl/0305)
+
+[6. Multi-class Problem](https://sungbinlim.github.io/sl/docs/mpsl/0306)
