--- a/docs/mpsl/0301.md
+++ b/docs/mpsl/0301.md
@@ -1,7 +1,7 @@
 ---
 layout: page-sidenav
-group: "Norm and Hilbert Spaces"
-title: "1. Hilbert Spaces"
+group: "SVM and Kernel Methods"
+title: "1. Mercer Kernels and RKHS"
 ---
 
 
