--- a/docs/mpsl/0303.md
+++ b/docs/mpsl/0303.md
@@ -1,7 +1,7 @@
 ---
 layout: page-sidenav
-group: "Norm and Hilbert Spaces"
-title: "3. Elements of Functional Analysis"
+group: "SVM and Kernel Methods"
+title: "3. Soft SVM"
 ---
 
 - Hilbert 공간의 성질과 Fourier Transform 의 관계를 이해한다
