--- a/docs/cml/0.md
+++ b/docs/cml/0.md
@@ -1,19 +1,7 @@
 ---
 layout: page-sidenav
-group: "Statistical Learning"
+group: "Causal Inference with ML"
 title: "Preface"
 ---
 
-이 페이지에선 Statistical Learning Theory 에서 사용되는 방법론의 수학적 원리들을 소개할 것입니다
-
-- Hilbert Spaces and Functional Analysis
-- Fourier Analysis
-- Wavelet Analysis
-- Advanced Statistical Models 
-
-- Reference
-	1. Gabriel Peyré 의 Mathematical Foundations of Data Sciences
-	2. Shai Shalev-Shwartz & Shai Ben-David 의 Understanding Machine Learning: From Theory to Algorithms
-	3. Stéhane Mallat 의 a Wavelet Tours of Signal Processing
-	4. 	James, Witten, Hastie, Tibshirani 의 An Introduction to Statistical Learning
-	2. Hastie, Tibshirani, Friedman 의 The Elements of Statistical Learning 
+이 페이지에선 Causal Inference 에 대한 내용과 머신러닝을 활용한 방법론에 대해서 소개할 것입니다.
